2009-04-04  Claude Paroz  <claude@2xlibre.net>

	* stats/management/commands/update-stats.py: Fix variable name.
	* vertimus/forms.py: Add custom widget to enable the separator in
	dropdowns.
	* vertimus/models.py: Add backup action to most states. Add a new
	fake separator action to add separators in dropdown action list.
	* vertimus/tests/__init__.py: Adapted to new action list.
	Fixes bugs #568773, #571826, #569864.

2009-04-04  Claude Paroz  <claude@2xlibre.net>

	* people/models.py: get_languages allows to get all languages from all
	teams the user is subscribed to.
	* stats/models.py: Pass a list of languages to stat generation so as they
	are always present.
	* stats/views.py: Generate and cache branch stats in the view.
	* templates/module_detail.html: branches is now a context variable.
	* templates/stats_show.html: stat1 renamed to clearer pot_stat.
	The authenticated user's language(s) are now always shown on the module
	detail page, even when no po file have been committed.
	Fixes bug #577700.

2009-04-04  Claude Paroz  <claude@2xlibre.net>

	* media/css/main.css: Slightly reduce spacing on titles.
	* templates/feeds/actions_title.html: Description is more useful than
	state.

2009-04-01  Claude Paroz  <claude@2xlibre.net>

	* vertimus/views.py: Catch Unicode decoding errors on file content
	conversion.

2009-03-30  Claude Paroz  <claude@2xlibre.net>

	* settings_sample.py: Add settings for defining the project VCS.
	* stats/models.py: New method to determine if module is hosted in project
	VCS.
	* stats/views.py:
	* vertimus/views.py: Pass non_standard_repo_msg to the templates.
	* templates/module_detail.html:
	* templates/vertimus/vertimus_detail.html: Use new method of specifying if
	module is hosted on project VCS.

2009-03-24  Claude Paroz  <claude@2xlibre.net>

	* templates/vertimus/vertimus_detail.html:
	* vertimus/views.py: Add a note in vertimus detail when there is activity
	on another branch of the same module. So when a module branches in a