@@ -1,3 +1,8 @@
+2009-04-05  Stéphane Raimbault  <stephane.raimbault@gmail.com>
+
+	* vertimus/tests/__init__.py: Added a failing test for MySQL.
+	Related to #568195.
+
 2009-04-04  Claude Paroz  <claude@2xlibre.net>
 
 	* stats/management/commands/update-stats.py: Fix variable name.
